force-app/main/default/objects/Account/fields/Accepted_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Accepted_Conditions__c</fullName>
    <label>Accepted Terms &amp; Conditions</label>
    <type>DateTime</type>
</CustomField>