force-app/main/default/objects/Account/fields/Account_Declined_Reason__c.field-meta.xml
<CustomField>
    <fullName>Account_Declined_Reason__c</fullName>
    <label>Account Declined Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>