force-app/main/default/objects/Account/fields/Account_ECN__c.field-meta.xml
<CustomField>
    <fullName>Account_ECN__c</fullName>
    <formula>Name  &amp; &quot;( &quot;  &amp;  ECN__c  &amp; &quot; )&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account (ECN)</label>
    <type>Text</type>
</CustomField>