force-app/main/default/objects/Account/fields/Account_notes__c.field-meta.xml
<CustomField>
    <fullName>Account_notes__c</fullName>
    <label>Account Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>