force-app/main/default/objects/Account/fields/Account_Status_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Account_Status_Change_Date__c</fullName>
    <inlineHelpText>Whenever the account changes captures the date</inlineHelpText>
    <label>Account Status Change Date</label>
    <type>Date</type>
</CustomField>