force-app/main/default/objects/Account/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Automatically ticked if the account has been activated in client database.</inlineHelpText>
    <label>Client Database Active</label>
    <type>Checkbox</type>
</CustomField>