force-app/main/default/objects/Account/fields/active_EFT_contract__c.field-meta.xml
<CustomField>
    <fullName>active_EFT_contract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>active EFT contract</label>
    <type>Checkbox</type>
</CustomField>