force-app/main/default/objects/Account/fields/active_NA_contract__c.field-meta.xml
<CustomField>
    <fullName>active_NA_contract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>active N/A contract</label>
    <type>Checkbox</type>
</CustomField>