force-app/main/default/objects/Account/fields/active_VANs_contract__c.field-meta.xml
<CustomField>
    <fullName>active_VANs_contract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>active VANs contract</label>
    <type>Checkbox</type>
</CustomField>