force-app/main/default/objects/Account/fields/Add_eNett_EFT__c.field-meta.xml
<CustomField>
    <fullName>Add_eNett_EFT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add eNett EFT</label>
    <type>Checkbox</type>
</CustomField>