force-app/main/default/objects/Account/fields/Add_VANs__c.field-meta.xml
<CustomField>
    <fullName>Add_VANs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add VANs</label>
    <type>Checkbox</type>
</CustomField>