force-app/main/default/objects/Account/fields/Added_Children_Yearly_Actual_GDV_Value__c.field-meta.xml
<CustomField>
    <fullName>Added_Children_Yearly_Actual_GDV_Value__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This field stores the value added to the parent&#39;s &#39;Children Yearly Actual GDV&#39; field.</description>
    <label>Added Children Yearly Actual GDV Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>