force-app/main/default/objects/Account/fields/Additional_ECN_Risk_Rating__c.field-meta.xml
<CustomField>
    <fullName>Additional_ECN_Risk_Rating__c</fullName>
    <description>Risk Rating of Parent ECN</description>
    <formula>TEXT(Parent.Due_Diligence_Risk_Rating__c)</formula>
    <inlineHelpText>Risk Rating of Parent ECN</inlineHelpText>
    <label>Risk Rating</label>
    <type>Text</type>
</CustomField>