force-app/main/default/objects/Account/fields/All_Opportunities_Lost__c.field-meta.xml
<CustomField>
    <fullName>All_Opportunities_Lost__c</fullName>
    <formula>AND(Count_of_Opportunities_Total__c &gt;= 1, Count_of_Opportunities_Total__c = Count_of_Opportunities_Lost__c)</formula>
    <label>All Opportunities Lost</label>
    <type>Checkbox</type>
</CustomField>