force-app/main/default/objects/Account/fields/Allow_Change_to_Reporting_Parent__c.field-meta.xml
<CustomField>
    <fullName>Allow_Change_to_Reporting_Parent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Change to Reporting Parent</label>
    <type>Checkbox</type>
</CustomField>