force-app/main/default/objects/Account/fields/AML_Contact_Creation__c.field-meta.xml
<CustomField>
    <fullName>AML_Contact_Creation__c</fullName>
    <label>AML Contact Creation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>