force-app/main/default/objects/Account/fields/AML_Marker__c.field-meta.xml
<CustomField>
    <fullName>AML_Marker__c</fullName>
    <inlineHelpText>Automatically populated. This is defined by the AML team during the due diligence process.</inlineHelpText>
    <label>AML Marker</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Acquirer</fullName>
            </value>
            <value>
                <fullName>Corporate Group</fullName>
            </value>
            <value>
                <fullName>External Nominated User</fullName>
            </value>
            <value>
                <fullName>Pilot</fullName>
            </value>
            <value>
                <fullName>Resuscitated</fullName>
            </value>
            <value>
                <fullName>Sanction</fullName>
            </value>
            <value>
                <fullName>Supplier</fullName>
            </value>
            <value>
                <fullName>Transaction Monitoring</fullName>
            </value>
            <value>
                <fullName>WUBS Pilot</fullName>
            </value>
            <value>
                <fullName>IATA Pilot</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>