force-app/main/default/objects/Account/fields/Annual_Revenue_custom__c.field-meta.xml
<CustomField>
    <fullName>Annual_Revenue_custom__c</fullName>
    <label>Annual Revenue</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>