force-app/main/default/objects/Account/fields/Approved_by_Citi__c.field-meta.xml
<CustomField>
    <fullName>Approved_by_Citi__c</fullName>
    <label>Approved by Citi</label>
    <type>DateTime</type>
</CustomField>