force-app/main/default/objects/Account/fields/Automatic_DD_Checklist_Created__c.field-meta.xml
<CustomField>
    <fullName>Automatic_DD_Checklist_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Automatic DD Checklist Created</label>
    <type>Checkbox</type>
</CustomField>