force-app/main/default/objects/Account/fields/Awaiting_CMPA__c.field-meta.xml
<CustomField>
    <fullName>Awaiting_CMPA__c</fullName>
    <formula>AND(INCLUDES(Reference_Registration__r.Product__c, &#39;VANs&#39;), 
    ISPICKVAL(Account_Type__c, &#39;Customer&#39;), 
    /*ISPICKVAL(Reference_Registration__r.Agreement_Type__c, &#39;Standard T&amp;Cs&#39;),*/
    ISPICKVAL( Contract_Type__c , &#39;Standard T&amp;Cs&#39;),
    NOT(CMPA_received__c),
	OR(NOT(ISPICKVAL(Account_Status__c, &#39;Active&#39;)), AND(Add_VANs__c, NOT(INCLUDES(eNett_products__c, &#39;VANs&#39;))))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Awaiting CMPA</label>
    <type>Checkbox</type>
</CustomField>