force-app/main/default/objects/Account/fields/Brand_Name__c.field-meta.xml
<CustomField>
    <fullName>Brand_Name__c</fullName>
    <inlineHelpText>When converted from a Lead, this field will be auto-populated with value from Brand field on Lead.</inlineHelpText>
    <label>Brand Name</label>
    <type>TextArea</type>
</CustomField>