force-app/main/default/objects/Account/fields/Business_Days_since_T_C_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Business_Days_since_T_C_Accepted__c</fullName>
    <formula>ABS(
  (5 * ( FLOOR( ( T_C_Accepted_Date__c  - DATE( 1900, 1,  8 ) ) / 7 ) ) 
  + MIN( 5, MOD( T_C_Accepted_Date__c  - DATE( 1900, 1, 8 ), 7 ) ) )
  -
  (5 * ( FLOOR( ( today() - DATE( 1900, 1, 8 ) ) / 7 ) ) 
  + MIN( 5, MOD( today() - DATE( 1900, 1, 8 ), 7 ) ) )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>#Business Days since T&amp;C Accepted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>