force-app/main/default/objects/Account/fields/BusinessType__c.field-meta.xml
<CustomField>
    <fullName>BusinessType__c</fullName>
    <label>BusinessType</label>
    <length>50</length>
    <type>Text</type>
</CustomField>