force-app/main/default/objects/Account/fields/Children_Yearly_Actual_USD__c.field-meta.xml
<CustomField>
    <fullName>Children_Yearly_Actual_USD__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Combined total value of yearly actual USD from all children accounts.</description>
    <label>Children Yearly Actual USD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>