force-app/main/default/objects/Account/fields/Citi_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Citi_Approved_Date__c</fullName>
    <label>Citi Approved Date</label>
    <type>Date</type>
</CustomField>