force-app/main/default/objects/Account/fields/Client_internal_classification__c.field-meta.xml
<CustomField>
    <fullName>Client_internal_classification__c</fullName>
    <description>Total Company GDV  This field was previously a picklist type (Referrer, TTV &lt;$50m, TTV $50m - $1b, TTV &gt;$1b).</description>
    <inlineHelpText>Please enter the classification as a whole numerical value.  Abbreviated values are permitted (B - Billion, M - Million, K - Thousand) Eg 1M - Will automatically be converted to 1,000,000.</inlineHelpText>
    <label>Total GDV p.a.</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>