force-app/main/default/objects/Account/fields/CMPA_received__c.field-meta.xml
<CustomField>
    <fullName>CMPA_received__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This applies to VANs customer only</description>
    <inlineHelpText>This applies to VANs customer only</inlineHelpText>
    <label>CMPA received?</label>
    <type>Checkbox</type>
</CustomField>