force-app/main/default/objects/Account/fields/Commercial_Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Parent_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commercial Parent Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Commercial Parent Account)</relationshipLabel>
    <relationshipName>CommercialParentAccounts</relationshipName>
    <type>Lookup</type>
</CustomField>