force-app/main/default/objects/Account/fields/Commercial_Parent_ECN__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Parent_ECN__c</fullName>
    <formula>Commercial_Parent_Account__r.ECN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commercial Parent ECN</label>
    <type>Text</type>
</CustomField>