force-app/main/default/objects/Account/fields/Contract_Affiliate_Entity__c.field-meta.xml
<CustomField>
    <fullName>Contract_Affiliate_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Affiliate Entity</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contract Affiliate Entity</relationshipLabel>
    <relationshipName>Contract_Affiliate_Entity_Account</relationshipName>
    <type>Lookup</type>
</CustomField>