force-app/main/default/objects/Account/fields/Count_of_Opportunities_Lost__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Opportunities_Lost__c</fullName>
    <label>Count of Opportunities (Lost)</label>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>7. Closed/Lost, 8. Closed/Lost - Product Removed</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>