force-app/main/default/objects/Account/fields/Count_of_Opportunities_Total__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Opportunities_Total__c</fullName>
    <label>Count of Opportunities (Total)</label>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>