force-app/main/default/objects/Account/fields/Creation_Type__c.field-meta.xml
<CustomField>
    <fullName>Creation_Type__c</fullName>
    <label>Creation Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Internal</fullName>
                <default>true</default>
                <label>Internal</label>
            </value>
            <value>
                <fullName>External</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>