force-app/main/default/objects/Account/fields/CurrencyCode__c.field-meta.xml
<CustomField>
    <fullName>CurrencyCode__c</fullName>
    <label>CurrencyCode</label>
    <length>3</length>
    <type>Text</type>
</CustomField>