force-app/main/default/objects/Account/fields/CurrencyName__c.field-meta.xml
<CustomField>
    <fullName>CurrencyName__c</fullName>
    <label>Currency</label>
    <length>30</length>
    <type>Text</type>
</CustomField>