force-app/main/default/objects/Account/fields/Customer_Sector_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Sector_Type__c</fullName>
    <label>Customer Sector Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Customer_Sector__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Traditional</fullName>
            </value>
            <value>
                <fullName>LLC</fullName>
            </value>
            <value>
                <fullName>Hotel</fullName>
            </value>
            <value>
                <fullName>Airline</fullName>
            </value>
            <value>
                <fullName>Ticket</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>